Fixed - NavFooter moved behind NavHeader

--- a/src/components/NavHeader/NavHeader.module.css
+++ b/src/components/NavHeader/NavHeader.module.css
@@ -14,7 +14,6 @@ MOBILE
 
 .navclickarea.open {
   display: block;
-  opacity: 1;
 }
 
 .navheader {
